# gmv-rs

./: Cargo.toml  README.md  config.yml  generate-sshkey.bat  push.bat
src/: git.rs  gitlab.rs  lib.rs  main.rs  settings.rs
