[package]
name = "gmv"
version = "0.1.0"
authors = ["xiahaihu <xiahaihu@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33"
config = "0.9.3"
serde = "1.0.100"
serde_derive = "1.0.100"
serde_json = "1.0.40"
hyper = "0.12.34"
reqwest = "0.9.20"
http = "0.1.18"